--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
     <title>Vima</title>
   </head>
   <style>
+    html,
+    body {
+      height: 100%;
+      font-family: sans-serif;
+    }
 
+    body {
+      margin: 0;
+      padding: 0;
+    }
+
+    #root {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+    }
   </style>
   <body>
     <div id="root"></div>
